--- a/Expanded/css/eyes.css
+++ b/Expanded/css/eyes.css
@@ -1,51 +1,17 @@
-@-webkit-keyframes eye-animation-main {
-  0% {
-    -webkit-transform: scale(5);
-            transform: scale(5);
-    opacity: 0;
-  }
-  10% {
-    -webkit-transform: scale(5);
-            transform: scale(5);
-    opacity: 1;
-  }
-  40% {
-    -webkit-transform: scale(5);
-            transform: scale(5);
-    opacity: 1;
-  }
-  60% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    width: 70px;
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
 @keyframes eye-animation-main {
   0% {
-    -webkit-transform: scale(5);
+    transform: scale(5);
+    opacity: 0;
+  }
+  20% {
             transform: scale(5);
     opacity: 0;
   }
-  5% {
-    -webkit-transform: scale(5);
-            transform: scale(5);
-    opacity: 1;
-  }
   40% {
-    -webkit-transform: scale(5);
             transform: scale(5);
     opacity: 1;
   }
   60% {
-    -webkit-transform: scale(1);
             transform: scale(1);
     width: 70px;
     opacity: 1;
@@ -57,25 +23,6 @@
     opacity: 0;
   }
 }
-
-@-webkit-keyframes eye-animation {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  60% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
 @keyframes eye-animation {
   0% {
     opacity: 0;
@@ -94,6 +41,20 @@
   }
 }
 
+@keyframes real-eyes-1 {
+  0% { opacity: 0; }
+  20% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+@keyframes real-eyes-2 {
+  0% { opacity: 0; }
+  20% { opacity: 0; }
+  40% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
 .eyes {
   width: 90%;
   padding-left: 5%;
@@ -110,7 +71,7 @@
   content: "";
   width: 100%;
   height: 100%;
-  z-index: 50;
+  z-index: 25;
 }
 .eyes:after {
   position: absolute;
@@ -122,17 +83,26 @@
   content: "";
   width: 100%;
   height: 100%;
-  z-index: 50;
+  z-index: 25;
 }
 .eyes > img {
-  -webkit-animation: eye-animation 10s;
-          animation: eye-animation 10s;
+  animation: eye-animation 6s;
   opacity: 0;
   width: 70px;
   margin: 5px;
 }
 .eyes > img.eye-main {
   opacity: 0;
-  -webkit-animation: eye-animation-main 10s;
-          animation: eye-animation-main 10s;
+  animation: eye-animation-main 6s;
+}
+.real-eyes {
+  animation: real-eyes-1 6s;
+  opacity: 0;
+  display: inline-block;
+  margin: 0;
+  color: rgb(73, 87, 94);
+}
+.real-eyes > span {
+  animation: real-eyes-2 6s;
+  color: rgb(40, 120, 165);
 }
