--- a/Expanded/css/styles.css
+++ b/Expanded/css/styles.css
@@ -22,29 +22,12 @@
   height: 375px;
   text-align: center;
 }
-.guarantee-wrapper {
+
+.text-container {
   text-align: center;
   position: absolute;
-  top: 400px;
+  top: 450px;
   left: 0px;
   width: 100%;
-}
-.guarantee {
-  display: inline-block;
-  margin: 0;
-  color: rgb(73, 87, 94);
-}
-.guarantee > span {
-  color: rgb(40, 120, 165);
-}
-.guarantee-text-wrapper {
-  position: absolute;
-  text-align: center;
-  top: 475px;
-  width: 100%;
-}
-.guarantee-text {
-  color: rgb(117, 129, 137);
-  display: inline-block;
-  font-weight: bold;
+  z-index: 50;
 }
