--- a/Expanded/css/eyes.css
+++ b/Expanded/css/eyes.css
@@ -4,15 +4,15 @@
     opacity: 0;
   }
   20% {
-            transform: scale(5);
+    transform: scale(5);
     opacity: 0;
   }
   40% {
-            transform: scale(5);
+    transform: scale(5);
     opacity: 1;
   }
   60% {
-            transform: scale(1);
+    transform: scale(1);
     width: 70px;
     opacity: 1;
   }
@@ -23,6 +23,7 @@
     opacity: 0;
   }
 }
+
 @keyframes eye-animation {
   0% {
     opacity: 0;
@@ -42,17 +43,36 @@
 }
 
 @keyframes real-eyes-1 {
-  0% { opacity: 0; }
-  20% { opacity: 1; }
-  90% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
+
 @keyframes real-eyes-2 {
-  0% { opacity: 0; }
-  20% { opacity: 0; }
-  40% { opacity: 1; }
-  90% { opacity: 1; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .eyes {
@@ -61,10 +81,11 @@
   padding-right: 5%;
   overflow: hidden;
 }
+
 .eyes:before {
   position: absolute;
-  -webkit-box-shadow: 80px 0px 120px 10px rgba(255,255,255,0.75);
-          box-shadow: 80px 0px 120px 10px rgba(255,255,255,0.75);
+  -webkit-box-shadow: 80px 0px 120px 10px rgba(255, 255, 255, 0.75);
+  box-shadow: 80px 0px 120px 10px rgba(255, 255, 255, 0.75);
   left: -100%;
   top: -20px;
   background-color: white;
@@ -73,10 +94,11 @@
   height: 100%;
   z-index: 25;
 }
+
 .eyes:after {
   position: absolute;
-  -webkit-box-shadow: -80px 0px 120px 10px rgba(255,255,255,0.75);
-          box-shadow: -80px 0px 120px 10px rgba(255,255,255,0.75);
+  -webkit-box-shadow: -80px 0px 120px 10px rgba(255, 255, 255, 0.75);
+  box-shadow: -80px 0px 120px 10px rgba(255, 255, 255, 0.75);
   left: 100%;
   top: -20px;
   background-color: white;
@@ -85,24 +107,24 @@
   height: 100%;
   z-index: 25;
 }
-.eyes > img {
+
+.eyes>img {
   animation: eye-animation 6s;
   opacity: 0;
   width: 70px;
   margin: 5px;
 }
-.eyes > img.eye-main {
+
+.eyes>img.eye-main {
   opacity: 0;
   animation: eye-animation-main 6s;
 }
+
 .real-eyes {
   animation: real-eyes-1 6s;
   opacity: 0;
-  display: inline-block;
-  margin: 0;
-  color: rgb(73, 87, 94);
 }
-.real-eyes > span {
+
+.real-eyes>span {
   animation: real-eyes-2 6s;
-  color: rgb(40, 120, 165);
 }
