--- a/Expanded/css/styles.css
+++ b/Expanded/css/styles.css
@@ -5,7 +5,10 @@
   border: 1px solid #000000;
   background-color: #ffffff;
   font-family: "Open Sans", sans-serif;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   color: rgb(0, 84, 123);
   overflow: hidden;
 }
@@ -30,4 +33,14 @@
   left: 0px;
   width: 100%;
   z-index: 50;
+}
+
+.text-container > h1 {
+  display: inline-block;
+  margin: 0;
+  color: rgb(73, 87, 94);
+}
+
+.text-container > h1 > span {
+  color: rgb(40, 120, 165);
 }
