--- a/Expanded/css/guaranteed.css
+++ b/Expanded/css/guaranteed.css
@@ -1,52 +1,243 @@
-@keyframes hero {
-  0% { opacity: 0; }
-  10% { opacity: 1; }
+@-webkit-keyframes hero {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
   90% {
     opacity: 1;
-    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
   100% {
     opacity: 0;
-    transform: translateX(800px);
+    -webkit-transform: translateX(800px);
+            transform: translateX(800px);
+  }
+}
+
+@keyframes hero {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(800px);
+            transform: translateX(800px);
+  }
+}
+
+@-webkit-keyframes guarantee-container {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(800px);
+            transform: translateX(800px);
   }
 }
 
 @keyframes guarantee-container {
-  0% { opacity: 0; }
-  10% { opacity: 0; }
-  20% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
   90% {
     opacity: 1;
-    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
   100% {
     opacity: 0;
-    transform: translateX(800px);
+    -webkit-transform: translateX(800px);
+            transform: translateX(800px);
+  }
+}
+
+@-webkit-keyframes checkmark {
+  0% {
+    -webkit-transform: scale(0) translate(1px, -3px);
+            transform: scale(0) translate(1px, -3px);
+  }
+  5% {
+    -webkit-transform: scale(2) translate(1px, -3px);
+            transform: scale(2) translate(1px, -3px);
+  }
+  100% {
+    -webkit-transform: scale(2) translate(1px, -3px);
+            transform: scale(2) translate(1px, -3px);
   }
 }
 
 @keyframes checkmark {
-  0% { transform: scale(0)  translate(1px, -3px); }
-  5% { transform: scale(2)  translate(1px, -3px); }
-  100% { transform: scale(2)  translate(1px, -3px); }
+  0% {
+    -webkit-transform: scale(0) translate(1px, -3px);
+            transform: scale(0) translate(1px, -3px);
+  }
+  5% {
+    -webkit-transform: scale(2) translate(1px, -3px);
+            transform: scale(2) translate(1px, -3px);
+  }
+  100% {
+    -webkit-transform: scale(2) translate(1px, -3px);
+            transform: scale(2) translate(1px, -3px);
+  }
+}
+
+@-webkit-keyframes img-scroll {
+  0% {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+  5% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
 }
 
 @keyframes img-scroll {
-  0% { transform: translateX(-50px); }
-  5% { transform: translateX(0px); }
-  100% { transform: translateX(0px); }
+  0% {
+    -webkit-transform: translateX(-50px);
+            transform: translateX(-50px);
+  }
+  5% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes paragraph {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes paragraph {
-  0% { opacity: 0; }
-  10% { opacity: 1; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes guaranteed-performance {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes guaranteed-performance {
-  0% {opacity: 0;}
-  25% { opacity: 1;}
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes animation-container {
+  0% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  75% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  85% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes animation-container {
+  0% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  75% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+  }
+  85% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
 }
 
 .guaranteed-hero {
@@ -57,17 +248,21 @@
   width: 40%;
   vertical-align: top;
 }
-.guaranteed-hero > h1 {
+
+.guaranteed-hero>h1 {
   opacity: 0;
-  animation: hero 10s;
+  -webkit-animation: hero 10s;
+          animation: hero 10s;
   font-weight: bolder;
   display: block;
   padding-top: 100px;
   padding-bottom: 100px;
   border-right: solid 1px black;
 }
+
 .guarantees-container {
-  animation: guarantee-container 10s;
+  -webkit-animation: guarantee-container 10s;
+          animation: guarantee-container 10s;
   position: relative;
   text-align: left;
   display: inline-block;
@@ -77,44 +272,56 @@
   margin-top: -10px;
   width: 50%;
 }
+
 .guaranteed {
   display: block;
   vertical-align: top;
 }
+
 .guarantee-icon {
   height: 50px;
   width: 50px;
   display: inline-block;
-  transform: translateY(50%);
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
   margin: 0;
   padding: none;
   margin-right: 40px;
   overflow: hidden;
 }
 
-.guarantee-icon > img {
+.guarantee-icon>img {
   margin: 0;
-  transform: translateX(-50px);
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-transform: translateX(-50px);
+          transform: translateX(-50px);
 }
 
 .checkbox {
   border: solid 2px rgb(73, 87, 94);
   border-radius: 3px;
 }
+
 .fa-check {
   display: inline-block;
   color: rgb(48, 197, 244);
-  transform: scale(0);
-  animation-timing-function: cubic-bezier(.72,.05,.6,1);
-  animation: checkmark-1 1s;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-animation-timing-function: cubic-bezier(.72, .05, .6, 1);
+          animation-timing-function: cubic-bezier(.72, .05, .6, 1);
+  -webkit-animation: checkmark-1 1s;
+          animation: checkmark-1 1s;
 }
-.guaranteed > h2 {
+
+.guaranteed>h2 {
   margin: 0;
   padding: 0;
   margin-left: 20px;
   display: inline-block;
 }
-.guaranteed > p {
+
+.guaranteed>p {
   opacity: 0;
   padding: none;
   margin: 10px;
@@ -124,48 +331,74 @@
 }
 
 .guaranteed-viewability .fa-check {
-  animation: checkmark 10s;
-  animation-delay: 1.5s;
-}
-.guaranteed-viewability > .guarantee-icon > img {
-  animation: img-scroll 10s;
-  animation-delay: 1.5s;
+  -webkit-animation: checkmark 10s;
+          animation: checkmark 10s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
-.guaranteed-viewability > p {
-  animation: paragraph 10s;
-  animation-delay: 2.5s;
+.guaranteed-viewability>.guarantee-icon>img {
+  -webkit-animation: img-scroll 10s;
+          animation: img-scroll 10s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.guaranteed-viewability>p {
+  -webkit-animation: paragraph 10s;
+          animation: paragraph 10s;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
 }
 
 .guaranteed-safety .fa-check {
-  animation: checkmark 10s;
-  animation-delay: 3.5s;
+  -webkit-animation: checkmark 10s;
+          animation: checkmark 10s;
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
 }
-.guaranteed-safety > .guarantee-icon > img {
-  animation: img-scroll 10s;
-  animation-delay: 3.5s;
+
+.guaranteed-safety>.guarantee-icon>img {
+  -webkit-animation: img-scroll 10s;
+          animation: img-scroll 10s;
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
 }
-.guaranteed-safety > p {
-  animation: paragraph 10s;
-  animation-delay: 4.5s;
+
+.guaranteed-safety>p {
+  -webkit-animation: paragraph 10s;
+          animation: paragraph 10s;
+  -webkit-animation-delay: 4.5s;
+          animation-delay: 4.5s;
 }
 
 .guaranteed-placement .fa-check {
-  animation: checkmark 10s;
-  animation-delay: 5.5s;
-}
-.guaranteed-placement > .guarantee-icon > img {
-  animation: img-scroll 10s;
-  animation-delay: 5.5s;
-}
-.guaranteed-placement > p {
-  animation: paragraph 10s;
-  animation-delay: 6.5s;
+  -webkit-animation: checkmark 10s;
+          animation: checkmark 10s;
+  -webkit-animation-delay: 5.5s;
+          animation-delay: 5.5s;
 }
 
+.guaranteed-placement>.guarantee-icon>img {
+  -webkit-animation: img-scroll 10s;
+          animation: img-scroll 10s;
+  -webkit-animation-delay: 5.5s;
+          animation-delay: 5.5s;
+}
+
+.guaranteed-placement>p {
+  -webkit-animation: paragraph 10s;
+          animation: paragraph 10s;
+  -webkit-animation-delay: 6.5s;
+          animation-delay: 6.5s;
+}
+
+.guaranteed-animation {
+  -webkit-animation: animation-container 10s;
+          animation: animation-container 10s;
+}
 
 .leverage-netmining {
-  opacity: 0;
-  animation: guaranteed-performance 4s;
-  animation-delay: 7s;
+  -webkit-animation: guaranteed-performance 10s;
+          animation: guaranteed-performance 10s;
 }
