--- a/Expanded/css/guaranteed.css
+++ b/Expanded/css/guaranteed.css
@@ -1,3 +1,21 @@
+@-webkit-keyframes logo-fadeout {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes logo-fadeout {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @-webkit-keyframes hero {
   0% {
     opacity: 0;
@@ -8,12 +26,12 @@
   90% {
     opacity: 1;
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateX(800px);
-            transform: translateX(800px);
+    transform: translateX(800px);
   }
 }
 
@@ -27,12 +45,12 @@
   90% {
     opacity: 1;
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateX(800px);
-            transform: translateX(800px);
+    transform: translateX(800px);
   }
 }
 
@@ -49,12 +67,12 @@
   90% {
     opacity: 1;
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateX(800px);
-            transform: translateX(800px);
+    transform: translateX(800px);
   }
 }
 
@@ -71,72 +89,72 @@
   90% {
     opacity: 1;
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
     -webkit-transform: translateX(800px);
-            transform: translateX(800px);
+    transform: translateX(800px);
   }
 }
 
 @-webkit-keyframes checkmark {
   0% {
     -webkit-transform: scale(0) translate(1px, -3px);
-            transform: scale(0) translate(1px, -3px);
+    transform: scale(0) translate(1px, -3px);
   }
   5% {
     -webkit-transform: scale(2) translate(1px, -3px);
-            transform: scale(2) translate(1px, -3px);
+    transform: scale(2) translate(1px, -3px);
   }
   100% {
     -webkit-transform: scale(2) translate(1px, -3px);
-            transform: scale(2) translate(1px, -3px);
+    transform: scale(2) translate(1px, -3px);
   }
 }
 
 @keyframes checkmark {
   0% {
     -webkit-transform: scale(0) translate(1px, -3px);
-            transform: scale(0) translate(1px, -3px);
+    transform: scale(0) translate(1px, -3px);
   }
   5% {
     -webkit-transform: scale(2) translate(1px, -3px);
-            transform: scale(2) translate(1px, -3px);
+    transform: scale(2) translate(1px, -3px);
   }
   100% {
     -webkit-transform: scale(2) translate(1px, -3px);
-            transform: scale(2) translate(1px, -3px);
+    transform: scale(2) translate(1px, -3px);
   }
 }
 
 @-webkit-keyframes img-scroll {
   0% {
     -webkit-transform: translateX(-50px);
-            transform: translateX(-50px);
+    transform: translateX(-50px);
   }
   5% {
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
 }
 
 @keyframes img-scroll {
   0% {
     -webkit-transform: translateX(-50px);
-            transform: translateX(-50px);
+    transform: translateX(-50px);
   }
   5% {
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
 }
 
@@ -197,46 +215,46 @@
 @-webkit-keyframes animation-container {
   0% {
     -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    transform: translateY(50px);
   }
   75% {
     -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    transform: translateY(50px);
   }
   85% {
     -webkit-transform: translateY(0px);
-            transform: translateY(0px);
+    transform: translateY(0px);
   }
   100% {
     -webkit-transform: translateY(0px);
-            transform: translateY(0px);
+    transform: translateY(0px);
   }
 }
 
 @keyframes animation-container {
   0% {
     -webkit-transform: translateZ(0);
-            transform: translateZ(0);
+    transform: translateZ(0);
     -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    transform: translateY(50px);
   }
   75% {
     -webkit-transform: translateZ(0);
-            transform: translateZ(0);
+    transform: translateZ(0);
     -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    transform: translateY(50px);
   }
   85% {
     -webkit-transform: translateZ(0);
-            transform: translateZ(0);
+    transform: translateZ(0);
     -webkit-transform: translateY(0px);
-            transform: translateY(0px);
+    transform: translateY(0px);
   }
   100% {
     -webkit-transform: translateZ(0);
-            transform: translateZ(0);
+    transform: translateZ(0);
     -webkit-transform: translateY(0px);
-            transform: translateY(0px);
+    transform: translateY(0px);
   }
 }
 
@@ -252,7 +270,7 @@
 .guaranteed-hero>h1 {
   opacity: 0;
   -webkit-animation: hero 10s;
-          animation: hero 10s;
+  animation: hero 10s;
   font-weight: bolder;
   display: block;
   padding-top: 100px;
@@ -262,7 +280,7 @@
 
 .guarantees-container {
   -webkit-animation: guarantee-container 10s;
-          animation: guarantee-container 10s;
+  animation: guarantee-container 10s;
   position: relative;
   text-align: left;
   display: inline-block;
@@ -283,7 +301,7 @@
   width: 50px;
   display: inline-block;
   -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
   margin: 0;
   padding: none;
   margin-right: 40px;
@@ -294,9 +312,9 @@
   margin: 0;
   -webkit-backface-visibility: hidden;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   -webkit-transform: translateX(-50px);
-          transform: translateX(-50px);
+  transform: translateX(-50px);
 }
 
 .checkbox {
@@ -308,11 +326,11 @@
   display: inline-block;
   color: rgb(48, 197, 244);
   -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
   -webkit-animation-timing-function: cubic-bezier(.72, .05, .6, 1);
-          animation-timing-function: cubic-bezier(.72, .05, .6, 1);
+  animation-timing-function: cubic-bezier(.72, .05, .6, 1);
   -webkit-animation: checkmark-1 1s;
-          animation: checkmark-1 1s;
+  animation: checkmark-1 1s;
 }
 
 .guaranteed>h2 {
@@ -333,73 +351,80 @@
 
 .guaranteed-viewability .fa-check {
   -webkit-animation: checkmark 10s;
-          animation: checkmark 10s;
+  animation: checkmark 10s;
   -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 
 .guaranteed-viewability>.guarantee-icon>img {
   -webkit-animation: img-scroll 10s;
-          animation: img-scroll 10s;
+  animation: img-scroll 10s;
   -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 
 .guaranteed-viewability>p {
   -webkit-animation: paragraph 10s;
-          animation: paragraph 10s;
+  animation: paragraph 10s;
   -webkit-animation-delay: 2.5s;
-          animation-delay: 2.5s;
+  animation-delay: 2.5s;
 }
 
 .guaranteed-safety .fa-check {
   -webkit-animation: checkmark 10s;
-          animation: checkmark 10s;
+  animation: checkmark 10s;
   -webkit-animation-delay: 3.5s;
-          animation-delay: 3.5s;
+  animation-delay: 3.5s;
 }
 
 .guaranteed-safety>.guarantee-icon>img {
   -webkit-animation: img-scroll 10s;
-          animation: img-scroll 10s;
+  animation: img-scroll 10s;
   -webkit-animation-delay: 3.5s;
-          animation-delay: 3.5s;
+  animation-delay: 3.5s;
 }
 
 .guaranteed-safety>p {
   -webkit-animation: paragraph 10s;
-          animation: paragraph 10s;
+  animation: paragraph 10s;
   -webkit-animation-delay: 4.5s;
-          animation-delay: 4.5s;
+  animation-delay: 4.5s;
 }
 
 .guaranteed-placement .fa-check {
   -webkit-animation: checkmark 10s;
-          animation: checkmark 10s;
+  animation: checkmark 10s;
   -webkit-animation-delay: 5.5s;
-          animation-delay: 5.5s;
+  animation-delay: 5.5s;
 }
 
 .guaranteed-placement>.guarantee-icon>img {
   -webkit-animation: img-scroll 10s;
-          animation: img-scroll 10s;
+  animation: img-scroll 10s;
   -webkit-animation-delay: 5.5s;
-          animation-delay: 5.5s;
+  animation-delay: 5.5s;
 }
 
 .guaranteed-placement>p {
   -webkit-animation: paragraph 10s;
-          animation: paragraph 10s;
+  animation: paragraph 10s;
   -webkit-animation-delay: 6.5s;
-          animation-delay: 6.5s;
+  animation-delay: 6.5s;
 }
 
 .guaranteed-animation {
   -webkit-animation: animation-container 10s;
-          animation: animation-container 10s;
+  animation: animation-container 10s;
 }
 
 .leverage-netmining {
   -webkit-animation: guaranteed-performance 10s;
-          animation: guaranteed-performance 10s;
+  animation: guaranteed-performance 10s;
+}
+
+.logo-fadeout {
+  -webkit-animation: logo-fadeout 1.5s;
+  animation: logo-fadeout 1.5s;
+  -webkit-animation-delay: 8.5s;
+  animation-delay: 8.5s;
 }
