--- a/Expanded/css/guaranteed.css
+++ b/Expanded/css/guaranteed.css
@@ -100,31 +100,31 @@
 
 @-webkit-keyframes checkmark {
   0% {
-    -webkit-transform: scale(0) translate(1px, -3px);
-    transform: scale(0) translate(1px, -3px);
+    -webkit-transform: scale(0) translate(-5px, -10px);
+    transform: scale(0) translate(-5px, -10px);
   }
   5% {
-    -webkit-transform: scale(2) translate(1px, -3px);
-    transform: scale(2) translate(1px, -3px);
+    -webkit-transform: scale(1) translate(-5px, -10px);
+    transform: scale(1) translate(-5px, -10px);
   }
   100% {
-    -webkit-transform: scale(2) translate(1px, -3px);
-    transform: scale(2) translate(1px, -3px);
+    -webkit-transform: scale(1) translate(-5px, -10px);
+    transform: scale(1) translate(-5px, -10px);
   }
 }
 
 @keyframes checkmark {
   0% {
-    -webkit-transform: scale(0) translate(1px, -3px);
-    transform: scale(0) translate(1px, -3px);
+    -webkit-transform: scale(0) translate(-5px, -10px);
+    transform: scale(0) translate(-5px, -10px);
   }
   5% {
-    -webkit-transform: scale(2) translate(1px, -3px);
-    transform: scale(2) translate(1px, -3px);
+    -webkit-transform: scale(1) translate(-5px, -10px);
+    transform: scale(1) translate(-5px, -10px);
   }
   100% {
-    -webkit-transform: scale(2) translate(1px, -3px);
-    transform: scale(2) translate(1px, -3px);
+    -webkit-transform: scale(1) translate(-5px, -10px);
+    transform: scale(1) translate(-5px, -10px);
   }
 }
 
@@ -318,11 +318,15 @@
 }
 
 .checkbox {
+  display: inline-block;
   border: solid 2px rgb(73, 87, 94);
   border-radius: 3px;
+  width: 20px;
+  height: 20px;
 }
 
 .fa-check {
+  font-size: 2em;
   display: inline-block;
   color: rgb(48, 197, 244);
   -webkit-transform: scale(0);
@@ -334,10 +338,13 @@
 }
 
 .guaranteed>h2 {
+  vertical-align: center;
   margin: 0;
   padding: 0;
   margin-left: 20px;
   display: inline-block;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 .guaranteed>p {
@@ -347,6 +354,8 @@
   margin-left: 90px;
   margin-top: 20px;
   display: inline-block;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 .guaranteed-viewability .fa-check {
